cluster/k8s/atuin/atuin.k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    goldilocks.fairwinds.com/enabled: "true"
    goldilocks.fairwinds.com/vpa-update-mode: auto
  name: atuin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/name: atuin
  name: atuin-server
  namespace: atuin
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: atuin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: atuin
    spec:
      containers:
        - args:
            - start
          image: ghcr.io/atuinsh/atuin:18.22.0
          livenessProbe:
            httpGet:
              path: /
              port: 8888
            initialDelaySeconds: 10
            periodSeconds: 10
          name: atuin
          ports:
            - containerPort: 8888
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: 8888
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 64Mi
      nodeSelector:
        topology.kubernetes.io/zone: hil-ovh
---
apiVersion: v1
kind: Service
metadata:
  name: atuin-server
  namespace: atuin
spec:
  ports:
    - name: http
      port: 8888
      protocol: TCP
      targetPort: 8888
  selector:
    app.kubernetes.io/name: atuin
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: atuin
  namespace: atuin
spec:
  hostnames:
    - atuin.allegedly.works
  parentRefs:
    - name: cluster-gateway
      namespace: gateway-system
  rules:
    - backendRefs:
        - name: atuin-server
          port: 8888
