cluster/k8s/atuin/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: atuin
  namespace: atuin
spec:
  parentRefs:
    - name: cluster-gateway
      namespace: gateway-system
  hostnames:
    - "atuin.allegedly.works"
  rules:
    - backendRefs:
        - name: atuin-server
          port: 8888
